# HelioForge

./: .gitignore  README.md  generate_synthetic_data.py  pyproject.toml  visualize_data_comparison.py
data/: SyntheticData.csv
src/pvtoolkit/: __init__.py  anomaly_detection.py  shadow_analysis.py  shadow_projection.py  solar_geometry.py  time_series.py
src/pvtoolkit/workflows/: __init__.py  anomaly_workflow.py  shadow_workflow.py
