[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvtoolkit"
version = "0.1.0"
description = "Open-source toolkit for solar geometry, shadow projection, and PV anomaly monitoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name="Kunal Sharma", email="kunal.nit90@gmail.com" }]

# **Dependencies** your code needs at runtime:
dependencies = [
  "numpy>=1.21,<2.0",
  "pandas>=1.3",
  "pvlib>=0.9",
  "shapely>=1.8",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "scikit-learn>=1.0.0",
  "tensorflow>=2.8.0",
  "plotly>=5.0.0",
  "pyod>=1.0.0",
  "sdv>=1.0.0",
]

# **Tell setuptools to only package your src folder:**
[tool.setuptools.packages.find]
where = ["src"]
include = ["pvtoolkit"]